# chai-rs

./: .env.example  .gitignore  Cargo.toml  README.en.md  README.md  README.ru.md
chai-cli/: Cargo.toml
chai-cli/examples/: inspect_qdrant_fields.rs  inspect_rag_data.rs  test_rag_flow.rs  test_tea_ids.rs
chai-cli/src/: main.rs
chai-core/: Cargo.toml
chai-core/src/: ai.rs  auth.rs  cache.rs  config.rs  database.rs  db.rs  embeddings.rs  http.rs  lib.rs  models.rs  openrouter.rs  qdrant.rs  scraper.rs  tea_utils.rs  turso.rs
chai-core/tests/: prompt_injection.rs
chai-web/: Cargo.toml  build.rs
chai-web/src/: app.rs  lib.rs  main.rs  models.rs  utils.rs
chai-web/src/components/: auth.rs  home.rs  mod.rs  tea_card.rs  theme_toggle.rs
chai-web/src/server/: ai.rs  auth.rs  config.rs  db.rs  mod.rs  qdrant.rs
chai-web/style/: main.css
deploy/: README.md  chai.service  deploy.sh  qdrant-chai.service
