[package]
name = "chai-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "chai"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
chai-core = { path = "../chai-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
qdrant-client = { workspace = true }

# CLI specific
clap = { workspace = true }
